# projeto2

./: README.md
gerador_senhas/: .coverage  main.py  pyproject.toml
gerador_senhas/gerador_senhas/: password_generator.py
gerador_senhas/login/: login_creation.py
gerador_senhas/tests/: .coverage  test_login.py  test_password_generator.py  test_user.py
gerador_senhas/user/: user_creation.py
