[tool.poetry]
name = "gerador-senhas"
version = "0.1.0"
description = ""
authors = ["Talisson Avila <talisson_avila@hotmail.com>"]
readme = "README.md"
packages = [{include = "gerador_senhas"}]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.5.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 100
